kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: roboshop
  labels:
    name: roboshop
    app.kubernetes.io/part-of: roboshop
