kubernetes/rabbitmq-debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rabbitmq-debug
  namespace: roboshop
spec:
  restartPolicy: Never
  containers:
  - name: debug
    image: busybox:1.36
    command: ["sleep","3600"]
    volumeMounts:
    - name: data
      mountPath: /var/lib/rabbitmq
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: data-rabbitmq-0
