kubernetes/rabbit_mq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: roboshop
  labels:
    app: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: http
      port: 15672
      targetPort: 15672

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: roboshop

spec:
  serviceName: rabbitmq
  replicas: 1

  selector:
    matchLabels:
      app: rabbitmq

  template:
    metadata:
      labels:
        app: rabbitmq

    spec:
      securityContext:
        fsGroup: 999
        fsGroupChangePolicy: Always
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          imagePullPolicy: IfNotPresent

          securityContext:
            runAsUser: 999
            runAsGroup: 999
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          ports:
            - name: amqp
              containerPort: 5672

            - name: http
              containerPort: 15672

          readinessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - -q
                - ping
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 5

          livenessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - -q
                - status
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5

          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi

          volumeMounts:
            - name: data
              mountPath: /var/lib/rabbitmq

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: gp3
        resources:
          requests:
            storage: 5Gi
