kubernetes/30-ingress.yaml
# AWS Load Balancer Controller (ALB Ingress)
#
# Architecture:
#
# Browser
#    │
# HTTPS
#    │
# AWS ALB
#    │
# Kubernetes Ingress
#    ├── /api/catalogue -> catalogue
#    ├── /api/user      -> user
#    ├── /api/cart      -> cart
#    ├── /api/payment   -> payment
#    ├── /api/shipping  -> shipping
#    └── /              -> frontend
#
# Frontend nginx serves only static files.
# API routing is handled by the ALB Ingress.

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
spec:
  controller: ingress.k8s.aws/alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roboshop
  namespace: roboshop
  labels:
    app.kubernetes.io/part-of: roboshop

  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: roboshop-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    #alb.ingress.kubernetes.io/ssl-redirect: "443"
   # alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06

    # Replace after ACM certificate is created
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:REGION:ACCOUNT_ID:certificate/REPLACE_ME

    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
    alb.ingress.kubernetes.io/success-codes: "200"

    alb.ingress.kubernetes.io/load-balancer-attributes: >-
      idle_timeout.timeout_seconds=60,
      routing.http2.enabled=true,
      routing.http.drop_invalid_header_fields.enabled=true,
      deletion_protection.enabled=false

    alb.ingress.kubernetes.io/tags: Project=roboshop,Environment=production
    alb.ingress.kubernetes.io/group.name: roboshop

spec:
  ingressClassName: alb

  rules:
    - host: shop.streenzo.online
      http:
        paths:

          - path: /api/catalogue
            pathType: Prefix
            backend:
              service:
                name: catalogue
                port:
                  number: 8080

          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 8080

          - path: /api/cart
            pathType: Prefix
            backend:
              service:
                name: cart
                port:
                  number: 8080

          - path: /api/payment
            pathType: Prefix
            backend:
              service:
                name: payment
                port:
                  number: 8080

          - path: /api/shipping
            pathType: Prefix
            backend:
              service:
                name: shipping
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
